--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Volaris API</title>
+    <title>Volaris API 1.0</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -36,7 +36,7 @@
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
         <div class="vert-text">
-            <h1>Volaris API</h1>
+            <h1>Volaris API 1.0</h1>
             <h3>Sharing flights data, to do whatever you want!</h3>
             <a href="#about" class="btn btn-default btn-lg">About this</a>
         </div>
