--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
 <body>
 
     <!-- Side Menu -->
-    <a id="menu-toggle" href="#" class="btn btn-primary btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <a id="menu-toggle" href="#" class="btn btn-warning btn-lg toggle"><i class="fa fa-bars"></i></a>
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+            <a id="menu-close" href="#" class="btn btn-danger btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             </li>
             <li><a href="#top">Home</a>
             </li>
@@ -38,7 +38,7 @@
         <div class="vert-text">
             <h1>Volaris API 1.0</h1>
             <h3>Sharing flights data, to do whatever you want!</h3>
-            <a href="#about" class="btn btn-default btn-lg">About this</a>
+            <a href="#about" class="btn btn-danger btn-lg">About this</a>
         </div>
     </div>
     <!-- /Full Page Image Header Area -->
